# image-sentinel

./: .env  .gitignore  database.js  package.json  server.js
client/: index.html  package.json  vite.config.js
client/src/: App.jsx  index.css  main.jsx
cpp-service/: CMakeLists.txt  main.cpp
